--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id = "board">
-        <h1> Tic Tac Toe
+        <h1> Tic Tac Toe</h1>
+        <h2 id = 'message'></h2>
+        <h3 id = 'playAgain'></h3>
             <div class = "row">
-                <div class = "top left"></div> <!-- denotes top left square-->
-                <div class = "top middle" ></div>
-                <div class = "top right"></div>
+                <div class = "top left"> </div> <!-- denotes top left square-->
+                <div class = "top middle" > </div>
+                <div class = "top right"> </div>
 
             </div>
 
             <div class = "row">
-                <div class = "middle left"></div>
-                <div class = "center"></div>
-                <div class = "middle right"></div>
+                <div class = "middle left"> </div>
+                <div class = "center"> </div>
+                <div class = "middle right"> </div>
 
             </div>
 
             <div class = "row">
-                <div class = "bottom left"></div>
-                <div class = "bottom middle"></div>
-                <div class = "bottom right"></div>
+                <div class = "bottom left"> </div>
+                <div class = "bottom middle"> </div>
+                <div class = "bottom right"> </div>
 
             </div>
 
-        </h1>
+        
     </div>
+
+    <script src = "app.js"></script>
 </body>
 </html>
